--- a/Keltia.html
+++ b/Keltia.html
@@ -5,6 +5,7 @@
     <head>
 
         <meta charset="utf-8" />
+        <link href="style.css" rel="stylesheet" type="text/css">
 
         <title>Pub Keltia</title>
 
@@ -13,9 +14,11 @@
 
     <body>
       <header>
-        
-      </header>
 
+      </header>
+      <nav>
+        Nos Produits
+      </nav>
 
     </body>
 
