--- a/Keltia.html
+++ b/Keltia.html
@@ -8,6 +8,8 @@
         <link href="bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="fontawesome-free-5.13.0-web/css/all.min.css" rel="stylesheet" type="text/css">
         <link href="style.css" rel="stylesheet" type="text/css">
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script type="text/javascript" src="bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 
         <title>Pub Keltia</title>
@@ -16,18 +18,56 @@
 
 
     <body>
-      <header>
+        <header>
 
-      </header>
-        <nav class="row">
-          <ol>
-            <li class="fas fa-search ">Nos Produits</li>
-            <li class="fas fa-search ">Histoire</li>
-            <li class="fas fa-search ">Environnement</li>
-            <li class="fas fa-search ">Contact</li>
-          </ol>  
+        </header>
+
+        <nav class="navbar navbar-expand navbar-dark">
+            <a class="navbar-brand" href="#">
+              <img src="img/keltia.png" width="50" height="50" class="d-inline-block align-top" alt="">
+              Pub Le Keltia
+            </a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class ="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link fas fa-beer" href="#"> Nos Produits</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link fas fa-book" href="#"> Histoire</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link fas fa-store" href="#"> Environnement</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link fas fa-pen" href="#"> Contact</a>
+                </li>
+              </ul>
+            </div>  
         </nav>
-      
-    </body>
+        <div id="carouselExampleControls" class="carousel slide container" data-ride="carousel">
+
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/terrasse.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/keltia.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/interieur.jpeg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+
+        </div>
+   </body>
 
 </html>
