--- a/produits.html
+++ b/produits.html
@@ -23,17 +23,17 @@
         </header>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="Keltia.html">
               <img src="img/keltia.png" width="50" height="50" class="d-inline-block align-top" alt="">
               Pub Le Keltia
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class ="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link fas fa-beer" href="produits.html"> Nos Produits</a>
+              <ul class ="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link fas fa-beer" href="#"> Nos Produits</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link fas fa-book" href="#"> Histoire</a>
@@ -47,30 +47,32 @@
               </ul>
             </div>
         </nav>
-        <div id="carouselExampleControls" class="carousel slide container" data-ride="carousel">
-
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/terrasse.jpeg" class="d-block w-100" alt="...">
+          <div class="card-deck">
+            <div class="card h-100">
+              <img src="img/whiskey.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Whiskeys</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button type="button" class="btn btn-primary btn-lg">Large button</button>
+              </div>
             </div>
-            <div class="carousel-item">
-              <img src="img/whiskey.jpeg" class="d-block w-100" alt="...">
+            <div class="card h-100">
+              <img src="img/biere.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Bières</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <button type="button" class="btn btn-primary btn-lg">Large button</button>
+              </div>
             </div>
-            <div class="carousel-item">
-              <img src="img/interieur.jpeg" class="d-block w-100" alt="...">
+            <div class="card h-100">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <button type="button" class="btn btn-primary btn-lg">Large button</button>
+              </div>
             </div>
           </div>
-
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-
-        </div>
    </body>
 
 </html>
